# ternary_tree

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: datasets.py  datasets_extended.py  report.py  report_paper.py  run_benchmark.py  run_extended_benchmark.py
figures/: figure1_decision_surface.py  figure2_tree_structure.py  figure3_accuracy_coverage.py  figure4_probabilistic_tree.py  figure5_motivating_example.py
ternary_tree/: __init__.py  binary_ternary_tree.py  delta_methods.py  metrics.py  node.py  splitter.py  trinary_tree.py
tests/: test_binary_ternary_tree.py  test_delta_methods.py  test_trinary_tree.py
