[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ternary_tree"
version = "0.2.0"
description = "Ternary decision trees with locally-adaptive Undecided zones"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
benchmark = ["openml>=0.14"]
dev       = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ternary_tree*", "benchmark*"]